# acmewm

./: .gitignore  README.md  meson.build  test.sh
include/: output.h  surface.h  wm.h
protocols/: cursor-shape-v1.xml
src/: main.c  output.c  surface.c  wm.c
